objects/zkups__CustomAddressSource__c.object
<CustomObject>
    <customHelpPage>zkups__customAddressSourceHelp</customHelpPage>
    <description>UPS Custom Address Source stores the object and field mapping data allowing any standard or custom object to be used as a shipping data source</description>
    <fields>
        <fullName>Entity_Shipping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Entity being shipped</description>
        <label>Entity Shipping</label>
        <referenceTo>Entities__c</referenceTo>
        <relationshipLabel>UPS Custom Address Sources</relationshipLabel>
        <relationshipName>UPS_Custom_Address_Sources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkups__AddBarcodeField__c</fullName>
        <label>Add Barcode Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__AutoCreateShipment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Create Shipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__AutoPrint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Print</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__BillDutiesTaxAccountField__c</fullName>
        <label>Bill Duties Tax Account Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__BillDutiesTaxCountryField__c</fullName>
        <label>Bill Duties Tax Country Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__BillDutiesTaxPostalCodeField__c</fullName>
        <label>Bill Duties Tax Postal Code Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__BillDutiesTaxTypeField__c</fullName>
        <label>Bill Duties Tax Type Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__BillingAccountNumberField__c</fullName>
        <label>Billing Account Number Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__BillingCountryField__c</fullName>
        <label>Billing Country Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__BillingPostalCodeField__c</fullName>
        <label>Billing Postal Code Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__BillingTypeField__c</fullName>
        <label>Billing Type Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__CINameField__c</fullName>
        <label>CI Name Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__CertificateOfOriginField__c</fullName>
        <label>Certificate Of Origin Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__CityField__c</fullName>
        <label>City Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__CollectOnDeliveryAmountField__c</fullName>
        <label>Collect on Delivery Amount Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__CollectOnDeliveryField__c</fullName>
        <label>Collect on Delivery Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__CommodityNameField__c</fullName>
        <label>International Commodity Name Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__CompanyNameField__c</fullName>
        <label>Company Name Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__CostCenterField__c</fullName>
        <label>Cost Center Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__CountryField__c</fullName>
        <label>Country Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__CustomAddressSourceObject__c</fullName>
        <label>Custom Address Source Object</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__DefaultPackageTypeField__c</fullName>
        <label>Default Package Type Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__DeliveryConfirmationField__c</fullName>
        <label>Delivery Confirmation Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__DeliveryConfirmationTypeField__c</fullName>
        <label>Delivery Confirmation Type Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__DescriptionOfGoodsField__c</fullName>
        <label>Description of goods Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__DirectDeliveryOnlyField__c</fullName>
        <label>Direct Delivery Only Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__DomesticReturnServiceTypeField__c</fullName>
        <label>Domestic Return Service Type Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__DomesticServiceTypeField__c</fullName>
        <label>Domestic Service Type Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__EEIFormName__c</fullName>
        <label>EEI Form Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__EmailField__c</fullName>
        <label>Email Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__EmailMessageField__c</fullName>
        <label>Email Message Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__EmailRecipient3Field__c</fullName>
        <label>Email Recipient 3 Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__EmailRecipient4Field__c</fullName>
        <label>Email Recipient 4 Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__EmailRecipient5Field__c</fullName>
        <label>Email Recipient 5 Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ExportDateField__c</fullName>
        <label>Export Date Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__FirstReferenceTypeDefault__c</fullName>
        <label>First Reference Type Default</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__FirstReferenceValueField__c</fullName>
        <label>First Reference Value Field</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__InternationalReturnServiceTypeField__c</fullName>
        <label>International Return Service Type Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__InternationalServiceTypeField__c</fullName>
        <label>International Service Type Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__InvoiceDateField__c</fullName>
        <label>Invoice Date Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__InvoiceLineTotalField__c</fullName>
        <label>Invoice Line Total Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__IsResidenceField__c</fullName>
        <label>Is Residence Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__LabelImageTypeField__c</fullName>
        <label>Label Image Type Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ModKey__c</fullName>
        <label>Mod Key</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__NAFTANameField__c</fullName>
        <label>NAFTA Name Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__NameField__c</fullName>
        <label>Name Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__NonMachinableField__c</fullName>
        <label>Non Machinable Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__OutputCurrencyField__c</fullName>
        <label>Output Currency Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__OutputDaysToDeliveryField__c</fullName>
        <label>Output Days to Delivery Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__OutputNegTotalChargesField__c</fullName>
        <label>Output Neg Total Charges Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__OutputRetCurrencyField__c</fullName>
        <label>Output Ret Currency Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__OutputRetDaysToDeliveryField__c</fullName>
        <label>Output Ret Days to Delivery Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__OutputRetNegTotalChargesField__c</fullName>
        <label>Output Ret Neg Total Charges Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__OutputRetScheduledDeliveryTimeField__c</fullName>
        <label>Output Ret Scheduled Delivery Time Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__OutputRetTotalChargesField__c</fullName>
        <label>Output Ret Total Charges Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__OutputScheduledDeliveryTimeField__c</fullName>
        <label>Output Scheduled Delivery Time Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__OutputTotalChargesField__c</fullName>
        <label>Output Total Charges Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__OverridePaperlessField__c</fullName>
        <label>Override Paperless Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__PackageIdField__c</fullName>
        <label>Package Id Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__PhoneField__c</fullName>
        <label>Phone Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__PostalCodeField__c</fullName>
        <label>Postal Code Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__RelatedContactField__c</fullName>
        <label>Related Contact Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ReturnCostCenterField__c</fullName>
        <label>Return Cost Center Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ReturnDescriptionField__c</fullName>
        <label>Return Description Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ReturnNonMachinableField__c</fullName>
        <label>Return Non Machinable Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ReturnPackageDeclaredValueField__c</fullName>
        <label>Return Package Declared Value Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ReturnPackageHeightField__c</fullName>
        <label>Return Package Height Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ReturnPackageIdField__c</fullName>
        <label>Return Package Id Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ReturnPackageLengthField__c</fullName>
        <label>Return Package Length Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ReturnPackageTypeField__c</fullName>
        <label>Return Package Type Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ReturnPackageWeightField__c</fullName>
        <label>Return Package Weight Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ReturnPackageWidthField__c</fullName>
        <label>Return Package Width Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ReturnTypeField__c</fullName>
        <label>Return Type Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ReturnUSPSEndorsementField__c</fullName>
        <label>Return USPS Endorsement Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__Return_URL_Field__c</fullName>
        <label>Return URL Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__SaturdayDeliveryField__c</fullName>
        <label>Saturday Delivery Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__SecondReferenceTypeDefault__c</fullName>
        <label>Second Reference Type Default</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__SecondReferenceValueField__c</fullName>
        <label>Second Reference Value Field</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__SenderCityField__c</fullName>
        <label>City Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__SenderCompanyNameField__c</fullName>
        <label>Company Name Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__SenderCountryField__c</fullName>
        <label>Country Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__SenderEmailField__c</fullName>
        <label>Email Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__SenderIsResidenceField__c</fullName>
        <label>Is Residence Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__SenderNameField__c</fullName>
        <label>Name Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__SenderPhoneField__c</fullName>
        <label>Phone Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__SenderPostalCodeField__c</fullName>
        <label>Postal Code Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__SenderStateField__c</fullName>
        <label>State Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__SenderStreet1TextLineField__c</fullName>
        <label>Street 1 Text Line Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__SenderStreet2TextLineField__c</fullName>
        <label>Street 2 Text Line Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__SenderStreetTextAreaField__c</fullName>
        <label>Street Text Area Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ShipmatePreferenceField__c</fullName>
        <label>Shipmate Preference Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ShipmentObjectLookupField__c</fullName>
        <label>Shipment Object Lookup Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ShipmentTypeField__c</fullName>
        <label>Shipment Type Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__StateField__c</fullName>
        <label>State Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__Street1TextLineField__c</fullName>
        <label>Street 1 Text Line Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__Street2TextLineField__c</fullName>
        <label>Street 2 Text Line Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__StreetTextAreaField__c</fullName>
        <label>Street Text Area Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__USPSEndorsementField__c</fullName>
        <label>USPS Endorsement Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__UsePrimaryContactField__c</fullName>
        <label>Use Primary Contact Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>UPS Custom Address Source</label>
    <listViews>
        <fullName>Nolan_Daigle_CustomAddressSource2</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>zkups__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Custom Address Source Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UPS Custom Address Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>